# fidgetapps

./: Cargo.toml  SHORTCUT_EDITING_FEATURES.md  dev.sh  launch-fidgetapps.sh  package.json  tailwind.config.js
src/: App.css  App.tsx  Settings.tsx  app-launcher.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bundled-bin/: launch_and_move.sh  move_to_largest_display.sh
src-tauri/src/: main.rs
src/components/ui/: color-picker.tsx
